feat: implement functional reminder system
